[project]
name = "dofbot-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.1",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "onnxruntime>=1.23.2",
    "openai>=2.8.1",
    "pyaudio>=0.2.14",
    "pyserial>=3.5",
    "transformers>=4.57.1",
    "websocket>=0.2.1",
]

[project.optional-dependencies]
arm = ["arm-lib"]

[tool.uv.workspace]
members = [
    "Dofbot/0.py_install",
]

[tool.uv.sources]
arm-lib = { workspace = true, editable = true }
